review/full list

--- a/src/pug/base/filter-details.pug
+++ b/src/pug/base/filter-details.pug
@@ -16,7 +16,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Марка авто
-              select.form__select-options
+              select.custom-select
                 option --
                 option ACURA
                 option ALFA ROMEO
@@ -27,7 +27,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Модель
-              select.form__select-options
+              select.custom-select
                 option --
                 option Azure
                 option Bentayga
@@ -40,7 +40,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Цвет
-              select.form__select-options
+              select.custom-select
                 option --
                 option Значение 1
                 option Значение 2
@@ -51,7 +51,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Материал
-              select.form__select-options
+              select.custom-select
                 option --
                 option Значение 1
                 option Значение 2
