--- a/src/pug/base/filter-tires.pug
+++ b/src/pug/base/filter-tires.pug
@@ -12,7 +12,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Ширина
-              select.form__select-options
+              select.custom-select
                 option --
                 option 5
                 option 6.5
@@ -23,7 +23,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Высота
-              select.form__select-options
+              select.custom-select
                 option --
                 option 9.5
                 option 10
@@ -34,7 +34,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Диаметр
-              select.form__select-options
+              select.custom-select
                 option --
                 option 10
                 option 12
@@ -48,7 +48,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Ширина
-              select.form__select-options
+              select.custom-select
                 option --
                 option 5
                 option 6.5
@@ -59,7 +59,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Высота
-              select.form__select-options
+              select.custom-select
                 option --
                 option 9.5
                 option 10
@@ -70,7 +70,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Диаметр
-              select.form__select-options
+              select.custom-select
                 option --
                 option 10
                 option 12
