--- a/src/pug/base/results-form.pug
+++ b/src/pug/base/results-form.pug
@@ -30,7 +30,7 @@ form.form.mb-3(action="#")
           span.form__label-title В наличии от 4 шт.
       .col-xl-3.col-md-4.order-3.order-md-2
         .form__select
-          select.form__select-options
+          select.custom-select
             option По умолчанию
             option По возрастанию цены
             option По убыванию цены
