--- a/src/pug/cart.pug
+++ b/src/pug/cart.pug
@@ -109,7 +109,7 @@ block wrapper
             label.h6.d-inline-block.mb-0 Предпочтительный год производства шин:
           .col-xl-5.col-md-6.mb-3.mb-md-0
             .form__select
-              select.form__select-options
+              select.custom-select
                 option 2022
                 option 2021
                 option 2020
@@ -119,7 +119,7 @@ block wrapper
             label.h6.d-inline-block.mb-0 Если старше:
           .col-xl-8.col-md-6.mb-3.mb-md-0
             .form__select
-              select.form__select-options
+              select.custom-select
                 option позвонить и подобрать аналог
                 option написать и подобрать аналог
                 option позвонить и подобрать аналог
