--- a/src/pug/checkout__delivery.pug
+++ b/src/pug/checkout__delivery.pug
@@ -165,42 +165,42 @@ block checkout
               +img('content/delivery/cdek.png')
             .col-md-8
               .form__select
-                select.form__select-options
+                select.custom-select
                   option Доставка по адресу
                   option Значение 1
                   option Значение 2
                   option Значение 3
         .form__item.mb-4
           .form__select
-            select.form__select-options
+            select.custom-select
               option Страна
               option Россия
               option Армения
               option Казахстан
         .form__item.mb-4
           .form__select
-            select.form__select-options
+            select.custom-select
               option Область / край
               option Ростовская обл.
               option Краснодарский кр.
               option Ставропольский кр.
         .form__item.mb-4
           .form__select
-            select.form__select-options
+            select.custom-select
               option Город
               option Ростов-на-Дону
               option Краснодар
               option Ставрополь
         .form__item.mb-4
           .form__select
-            select.form__select-options
+            select.custom-select
               option Улица
               option Ленина
               option Б. Садовая
               option Сарьяна
         .form__item.mb-4
           .form__select
-            select.form__select-options
+            select.custom-select
               option Дом
               option 34
               option 35
