--- a/src/pug/filter-motowheels.pug
+++ b/src/pug/filter-motowheels.pug
@@ -36,7 +36,7 @@ block wrapper
                     .col-4.col-lg-12
                       .form__select.mb-lg-4
                         .form__select-title Ширина
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -49,7 +49,7 @@ block wrapper
                     .col-4.col-lg-12
                       .form__select.mb-lg-4
                         .form__select-title Высота
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -62,7 +62,7 @@ block wrapper
                     .col-4.col-lg-12
                       .form__select
                         .form__select-title Диаметр
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -90,7 +90,7 @@ block wrapper
                   .form__section-title.h6.color-theme-disabled.mb-4 Применяемость
                   .form__select
                     .form__select-title Выберете марку
-                    select.form__select-options
+                    select.custom-select
                       option --
                       option Значение 1
                       option Значение 2
