--- a/src/pug/filter-oil.pug
+++ b/src/pug/filter-oil.pug
@@ -36,7 +36,7 @@ block wrapper
                     .col-6.col-lg-12
                       .form__select.mb-4
                         .form__select-title Тип
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -49,7 +49,7 @@ block wrapper
                     .col-6.col-lg-12
                       .form__select.mb-4
                         .form__select-title Двигатель
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -62,7 +62,7 @@ block wrapper
                     .col-6.col-lg-12
                       .form__select.mb-lg-4
                         .form__select-title Вязкость
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -75,7 +75,7 @@ block wrapper
                     .col-6.col-lg-12
                       .form__select
                         .form__select-title Назначение
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
