--- a/src/pug/results-auto.pug
+++ b/src/pug/results-auto.pug
@@ -19,7 +19,7 @@ block results__sidebar
             .col-sm-6.col-md-3.col-lg-12
               .form__select.mb-4
                 .form__select-title Марка
-                select.form__select-options
+                select.custom-select
                   option --
                   option ACURA
                   option ALFA ROMEO
@@ -30,7 +30,7 @@ block results__sidebar
             .col-sm-6.col-md-3.col-lg-12
               .form__select.mb-4
                 .form__select-title Модель
-                select.form__select-options
+                select.custom-select
                   option --
                   option Azure
                   option Bentayga
@@ -40,7 +40,7 @@ block results__sidebar
             .col-sm-6.col-md-3.col-lg-12
               .form__select.mb-4
                 .form__select-title Кузов
-                select.form__select-options
+                select.custom-select
                   option --
                   option 2000-2005 LC
                   option 2006-2011 LC
@@ -50,7 +50,7 @@ block results__sidebar
             .col-sm-6.col-md-3.col-lg-12
               .form__select
                 .form__select-title Двигатель
-                select.form__select-options
+                select.custom-select
                   option --
                   option 1.3
                   option 1.4
@@ -112,7 +112,7 @@ block results__sidebar
         .col-4.col-lg-12
           .form__select.mb-lg-4
             .form__select-title Ширина
-            select.form__select-options
+            select.custom-select
               option --
               option 5
               option 6.5
@@ -123,7 +123,7 @@ block results__sidebar
         .col-4.col-lg-12
           .form__select.mb-lg-4
             .form__select-title Высота
-            select.form__select-options
+            select.custom-select
               option --
               option 9.5
               option 10
@@ -134,7 +134,7 @@ block results__sidebar
         .col-4.col-lg-12
           .form__select
             .form__select-title Диаметр
-            select.form__select-options
+            select.custom-select
               option --
               option 10
               option 12
@@ -148,7 +148,7 @@ block results__sidebar
         .col-4.col-lg-12
           .form__select.mb-lg-4
             .form__select-title Ширина
-            select.form__select-options
+            select.custom-select
               option --
               option 5
               option 6.5
@@ -159,7 +159,7 @@ block results__sidebar
         .col-4.col-lg-12
           .form__select.mb-lg-4
             .form__select-title Высота
-            select.form__select-options
+            select.custom-select
               option --
               option 9.5
               option 10
@@ -170,7 +170,7 @@ block results__sidebar
         .col-4.col-lg-12
           .form__select
             .form__select-title Диаметр
-            select.form__select-options
+            select.custom-select
               option --
               option 10
               option 12
