--- a/src/pug/subcategory.pug
+++ b/src/pug/subcategory.pug
@@ -78,7 +78,7 @@ block wrapper
           .row.justify-content-end
             .col-xl-2.col-md-3.order-3.order-md-2
               .form__select
-                select.form__select-options
+                select.custom-select
                   option Сортировать
                   option По умолчанию
                   option По возрастанию цены
