--- a/src/pug/tpl/header.pug
+++ b/src/pug/tpl/header.pug
@@ -245,17 +245,17 @@ header.header
     nav.topmenu.swiper-container
       .topmenu__wrapper.swiper-wrapper
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Автошины
+          a.theme-hover(href="#") Автошины
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Мотошины
+          a.theme-hover(href="#") Мотошины
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Диски
+          a.theme-hover(href="#") Диски
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Аккумуляторы
+          a.theme-hover(href="#") Аккумуляторы
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Масла
+          a.theme-hover(href="#") Масла
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Автотовары
+          a.theme-hover(href="#") Автотовары
         .swiper-slide.w-auto
-          a.toptheme-hover(href="#") Шиномонтаж
+          a.theme-hover(href="#") Шиномонтаж
   block filter
