--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@ $grid-gutter-width: 8px;
 @import '~bootstrap/scss/modal';
 @import '~bootstrap/scss/images';
 @import '~bootstrap/scss/transitions';
+@import '~bootstrap/scss/custom-forms';
 @import '~bootstrap/scss/utilities/text';
 @import '~bootstrap/scss/utilities/embed';
 @import '~bootstrap/scss/utilities/borders';
