--- a/src/pug/articles__row.pug
+++ b/src/pug/articles__row.pug
@@ -15,7 +15,7 @@ block wrapper
       form.form.col-lg-7.col-md-6.d-flex.align-items-center.justify-content-end.px-0.mb-3(action="#")
         .col-xl-4.col-lg-5.col-md-8
           .form__select
-            select.form__select-options
+            select.custom-select
               option По умолчанию
               option По возрастанию цены
               option По убыванию цены
