--- a/src/pug/base/filter-wheels.pug
+++ b/src/pug/base/filter-wheels.pug
@@ -12,7 +12,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Ширина
-              select.form__select-options
+              select.custom-select
                 option --
                 option 5
                 option 6.5
@@ -23,7 +23,7 @@
           .col-4.col-lg-12
             .form__select.mb-lg-4
               .form__select-title Диаметр (R)
-              select.form__select-options
+              select.custom-select
                 option --
                 option 9.5
                 option 10
@@ -34,7 +34,7 @@
           .col-4.col-lg-12
             .form__select
               .form__select-title Отверстие
-              select.form__select-options
+              select.custom-select
                 option --
                 option 10
                 option 12
@@ -83,7 +83,7 @@
         .form__section-title.h6.color-theme-disabled.mb-4 Применяемость
         .form__select
           .form__select-title Выберете марку
-          select.form__select-options
+          select.custom-select
             option Audi
             option BMW
             option Cadillac
