--- a/src/pug/filter-battery.pug
+++ b/src/pug/filter-battery.pug
@@ -36,7 +36,7 @@ block wrapper
                     .col-6.col-lg-12
                       .form__select.mb-lg-4
                         .form__select-title Полярность
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
@@ -49,7 +49,7 @@ block wrapper
                     .col-6.col-lg-12
                       .form__select
                         .form__select-title Ёмкость
-                        select.form__select-options
+                        select.custom-select
                           option --
                           option Значение 1
                           option Значение 2
