--- a/src/pug/personal-auto.pug
+++ b/src/pug/personal-auto.pug
@@ -12,15 +12,15 @@ block personal
       .d-flex.flex-wrap.pl-md-4.pl-3.mb-xl-5.mb-4
         .col-md-3.pl-0.pr-md-4.pr-3.mb-4
           .dropdown
-            select.car-select.d-none
+            //- select.d-none
               option Значение 1
               option Значение 2
               option Значение 3
               option Значение 4
               option Значение 5
-            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") BMW
-            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-              .dropdown-menu__header.mb-2.bs-searchbox
+            button.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") BMW
+            .dropdown-menu
+              .dropdown-menu__header.mb-2
                 input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
               .dropdown-menu__body
                 ul.dropdown-menu__list
@@ -36,15 +36,15 @@ block personal
                     a.dropdown-menu__list-option(role="option") Значение 5
         .col-md-3.pl-0.pr-md-4.pr-3.mb-4
           .dropdown
-            select.car-select.d-none
+            //- select.d-none
               option Значение 1
               option Значение 2
               option Значение 3
               option Значение 4
               option Значение 5
-            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") M3
-            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-              .dropdown-menu__header.mb-2.bs-searchbox
+            button.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") M3
+            .dropdown-menu
+              .dropdown-menu__header.mb-2
                 input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
               .dropdown-menu__body
                 ul.dropdown-menu__list
@@ -60,15 +60,15 @@ block personal
                     a.dropdown-menu__list-option(role="option") Значение 5
         .col-md-3.pl-0.pr-md-4.pr-3.mb-4
           .dropdown
-            select.car-select.d-none
+            //- select.d-none
               option Значение 1
               option Значение 2
               option Значение 3
               option Значение 4
               option Значение 5
-            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Sport
-            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-              .dropdown-menu__header.mb-2.bs-searchbox
+            button.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Sport
+            .dropdown-menu
+              .dropdown-menu__header.mb-2
                 input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
               .dropdown-menu__body
                 ul.dropdown-menu__list
@@ -84,15 +84,15 @@ block personal
                     a.dropdown-menu__list-option(role="option") Значение 5
         .col-md-3.pl-0.pr-md-4.pr-3.mb-4
           .dropdown
-            select.car-select.d-none
+            //- select.d-none
               option Значение 1
               option Значение 2
               option Значение 3
               option Значение 4
               option Значение 5
-            button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") 1,3
-            .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-              .dropdown-menu__header.mb-2.bs-searchbox
+            button.dropdown-toggle(type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") 1,3
+            .dropdown-menu
+              .dropdown-menu__header.mb-2
                 input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
               .dropdown-menu__body
                 ul.dropdown-menu__list
