--- a/src/scss/tpl/_accordion.scss
+++ b/src/scss/tpl/_accordion.scss
@@ -23,9 +23,7 @@
     }
 
     .accordion__body {
-      opacity: 1;
-      height: 100%;
-      visibility: visible;
+      display: block;
     }
   }
 }
@@ -34,7 +32,7 @@
   @include py(.5rem);
   @include border(0 0 1px,rgba(0,0,0,0));
   cursor: pointer;
-  transition: all .3s ease;
+  //transition: all .3s ease;
 }
 
 .accordion__toggler {
@@ -43,8 +41,6 @@
 }
 
 .accordion__body {
-  height: 0;
-  opacity: 0;
-  visibility: hidden;
+  display: none;
   transition: all .3s ease;
 }
