--- a/src/scss/tpl/_form.scss
+++ b/src/scss/tpl/_form.scss
@@ -306,6 +306,30 @@
 
 .form__select {
   position: relative;
+
+  .custom-select {
+    @include h6;
+    height: 24px;
+    padding: .125rem .5rem;
+    cursor: pointer;
+    border: 0;
+    border-radius: .25rem;
+    background-color: $color__light;
+    box-shadow: inset 1px 1px 4px rgba(0, 0, 0, 0.16);
+
+    &:focus {
+      outline: none;
+      border: 0;
+    }
+
+    option {
+      cursor: pointer;
+
+      &:hover {
+        background-color: $color__brand;
+      }
+    }
+  }
 }
 
 .form__select-title {
